--- a/index.html
+++ b/index.html
@@ -169,7 +169,58 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-            <div class="ui-grid-b">
+            <table data-role="table" id="tablePoints" data-mode="reflow" class="ui-responsive">
+                <thead>
+                    <tr>
+                        <th data-priority="1">Ações</th>
+                        <th>Pontos</th>
+                        <th>Meus Pontos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Cadastro/Login</td>
+                        <td>5</td>
+                        <td><span id="pointsDetail-cadastro"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Cadastro Completo</td>
+                        <td>10</td>
+                        <td><span id="pointsDetail-completo"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Info Session Mobilidade</td>
+                        <td>15</td>
+                        <td><span id="pointsDetail-infosession"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Visita no Stand Softtek</td>
+                        <td>10</td>
+                        <td><span id="pointsDetail-stand"></span></td>
+                    </tr>
+                    <tr>
+                        <td>5 primeiros na Info Session</td>
+                        <td>25</td>
+                        <td><span id="pointsDetail-5info"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Participar da demonstração SAP</td>
+                        <td>15</td>
+                        <td><span id="pointsDetail-demo"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Preencher o Quiz Softtek</td>
+                        <td>15</td>
+                        <td><span id="pointsDetail-lulu"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Agendar uma visita</td>
+                        <td>5</td>
+                        <td><span id="pointsDetail-agenda"></span></td>
+                    </tr>
+                </tbody>
+            </table>
+            <!--<div class="ui-grid-b">
                 <div class="ui-block-a">Ações</div>
                 <div class="ui-block-b">Pontos</div>
                 <div class="ui-block-c">Meus Pontos</div>
@@ -215,7 +266,7 @@
                 <div class="ui-block-c">
                     <span id="pointsDetail-agenda"></span>
                 </div>
-            </div>
+            </div>-->
             <p>Total de Pontos: <span id="pointsDetail-totalpoints"></span></p>
         </div>
     </div>
