volta de div grid

--- a/index.html
+++ b/index.html
@@ -169,58 +169,7 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-            <table data-role="table" id="tablePoints" data-mode="reflow" class="ui-responsive">
-                <thead>
-                    <tr>
-                        <th data-priority="1">Ações</th>
-                        <th>Pontos</th>
-                        <th>Meus Pontos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Cadastro/Login</td>
-                        <td>5</td>
-                        <td><span id="pointsDetail-cadastro"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Cadastro Completo</td>
-                        <td>10</td>
-                        <td><span id="pointsDetail-completo"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Info Session Mobilidade</td>
-                        <td>15</td>
-                        <td><span id="pointsDetail-infosession"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Visita no Stand Softtek</td>
-                        <td>10</td>
-                        <td><span id="pointsDetail-stand"></span></td>
-                    </tr>
-                    <tr>
-                        <td>5 primeiros na Info Session</td>
-                        <td>25</td>
-                        <td><span id="pointsDetail-5info"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Participar da demonstração SAP</td>
-                        <td>15</td>
-                        <td><span id="pointsDetail-demo"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Preencher o Quiz Softtek</td>
-                        <td>15</td>
-                        <td><span id="pointsDetail-lulu"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Agendar uma visita</td>
-                        <td>5</td>
-                        <td><span id="pointsDetail-agenda"></span></td>
-                    </tr>
-                </tbody>
-            </table>
-            <!--<div class="ui-grid-b">
+            <div class="ui-grid-b">
                 <div class="ui-block-a">Ações</div>
                 <div class="ui-block-b">Pontos</div>
                 <div class="ui-block-c">Meus Pontos</div>
@@ -246,17 +195,17 @@
                 <div class="ui-block-c">
                     <span id="pointsDetail-stand"></span>
                 </div>
-                <div class="ui-block-a">5 primeiros a chegar na Info Session</div>
+                <div class="ui-block-a">5 primeiros na Info Session</div>
                 <div class="ui-block-b">25</div>
                 <div class="ui-block-c">
                     <span id="pointsDetail-5info"></span>
                 </div>
-                <div class="ui-block-a">Participar da demonstração SAP</div>
+                <div class="ui-block-a">Demonstração SAP</div>
                 <div class="ui-block-b">15</div>
                 <div class="ui-block-c">
                     <span id="pointsDetail-demo"></span>
                 </div>
-                <div class="ui-block-a">Preencher o Quiz Softtek</div>
+                <div class="ui-block-a">Quiz Softtek</div>
                 <div class="ui-block-b">15</div>
                 <div class="ui-block-c">
                     <span id="pointsDetail-lulu"></span>
@@ -266,7 +215,7 @@
                 <div class="ui-block-c">
                     <span id="pointsDetail-agenda"></span>
                 </div>
-            </div>-->
+            </div>
             <p>Total de Pontos: <span id="pointsDetail-totalpoints"></span></p>
         </div>
     </div>
