--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <!--Lulu Rank page-->
     <div id="lulurankPage" data-role="page" data-add-back-btn="true">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Ranking dos Stands</h1>
+            <h1>Stands Mais Votados!</h1>
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
