--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             <p><button id="scanQR" class="ui-btn ui-icon-star ui-btn-icon-left">Marcar Pontos</button></p>
             <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
             <p><a href="#agendaPage" class="topcoat-button" id="agenda" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Agende uma visita</a></p>
-            <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Stand Lulu</a></p>
+            <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Quiz</a></p>
             <p><a href="#fulldataPage" class="topcoat-button" id="fulldata" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Cadastro Completo</a></p>
+            <p><a href="#lulurankPage" class="topcoat-button" id="ranklulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking dos Stands</a></p>
         </div>
     </div>
 
@@ -285,7 +286,6 @@
                 </label>
             </div>
             <p><a href="#" class="topcoat-button" id="savelulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Salvar</a></p>
-            <p><a href="#lulurankPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking</a></p>
         </div>
     </div>
 
