--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-            <ul data-role="listview" id="myRankListView" data-inset="true" data-theme="d"></ul>
+            <ul data-role="listview" id="myRankListView" data-split-theme="a" data-split-icon="gear"  data-inset="true"></ul>
         </div>
     </div>
 </body>
