--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                 <p>Bem-vindo ao Aplicativo da Softtek para o SAP Forum 2014!</p>
                 <p>Com este aplicativo você terá acesso à programação da Softtek no evento, poderá participar de nossas atividades, receber informações, acumular pontos e concorrer a um <b>tablet!</b></p>
                 <p>Para somar pontos, registre os códigos QR disponíveis nos materiais e atividades da Softtek e acompanhe o seu desempenho na página “Meus pontos”. Quanto mais você participar, mais chance terá de ganhar!</p>
+                <label>
+                    <input type="checkbox" id="notDisclamer" name="notDisclamer">Não exibir novamente
+                </label>
                 <p><a id="okdisclamer" data-role="button" href="#home" data-icon="star" data-transition="slide" data-theme="a">Ok, Vamos lá!</a></p>
             </div>
         </div>
