--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-            <ul data-role="listview" id="myRankListView" data-split-theme="a" data-split-icon="gear"  data-inset="true"></ul>
+            <ul data-role="listview" id="myRankListView" data-theme="b" data-divider-theme="a" class="ui-listview ui-corner-all ui-shadow"></ul>
         </div>
     </div>
 </body>
