--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
 
     <!-- home page -->
     <div id="home" data-role="page" data-mini="true">
-        <div data-role="header" data-position="fixed" data-tap-toggle="false">
+        <div data-role="header" data-position="fixed" data-theme="a" data-tap-toggle=false">
             <h1>Olá <span id="ffname"></span>!</h1>
         </div>
-        <div class="info-wrapper">
-            <div class="info-wrapper-left">
-                <img class="ice-logo" />
-            </div>
-            <div class="clear"></div>
+        <div class="logo-splash">
+            <img class="logo-splash" src="images/logo-splash.png" width="65%" height="65%">
         </div>
-        <div data-role="content">
+        <div data-role="content" class="navigation-icons">
+            <a href="#fulldataPage" id="fulldata" data-transition="slide" class="nav-icon icon-red cadastro-nav"></a>
+            <a href="#infoSession" id="infosession" data-transition="slide" class="nav-icon icon-blue about-nav"></a>
+            <a href="#agendaPage" id="agenda" data-transition="slide" class="nav-icon icon-magenta blog-nav"></a>
+            <a href="#" id="scanQR" data-transition="slide" class="nav-icon icon-dblue folio-nav"></a>
+            <a href="#pointsDetail" id="points" data-transition="slide" class="nav-icon icon-green video-nav"></a>
+            <a href="#luluPage" id="lulu" data-transition="slide" class="nav-icon icon-yellow mail-nav"></a>
+        </div>
+        <!--<div data-role="content">
             <p><a href="#pointsDetail" class="topcoat-button" id="points" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Meus Pontos</a></p>
             <p><button id="scanQR" class="ui-btn ui-icon-star ui-btn-icon-left">Marcar Pontos</button></p>
             <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
@@ -44,6 +49,10 @@
             <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Quiz</a></p>
             <p><a href="#fulldataPage" class="topcoat-button" id="fulldata" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Cadastro Completo</a></p>
             <p><a href="#lulurankPage" class="topcoat-button" id="ranklulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking dos Stands</a></p>
+        </div>-->
+        <div>
+            <img class="navigation-icons" src="images/logo_rodape2.png" width="65%" height="65%">
+            <p class="landing-copyright copyright">SOFTTEK COPYRIGHT 2014. </BR>ALL RIGHTS RESERVED</p>
         </div>
     </div>
 
