--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <!-- home page -->
     <div id="home" data-role="page" data-mini="true">
-        <div data-role="header" data-position="fixed" data-theme="a" data-tap-toggle=false">
+        <div data-role="header" data-position="fixed" data-tap-toggle=false">
             <h1>Olá <span id="ffname"></span>!</h1>
         </div>
         <div class="logo-splash">
-            <img class="logo-splash" src="images/logo-splash.png" width="65%" height="65%">
+            <img class="logo-splash" src="images/logo-splash.png">
         </div>
         <div data-role="content" class="navigation-icons">
             <a href="#fulldataPage" id="fulldata" data-transition="slide" class="nav-icon icon-red cadastro-nav"></a>
@@ -41,17 +41,8 @@
             <a href="#pointsDetail" id="points" data-transition="slide" class="nav-icon icon-green video-nav"></a>
             <a href="#luluPage" id="lulu" data-transition="slide" class="nav-icon icon-yellow mail-nav"></a>
         </div>
-        <!--<div data-role="content">
-            <p><a href="#pointsDetail" class="topcoat-button" id="points" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Meus Pontos</a></p>
-            <p><button id="scanQR" class="ui-btn ui-icon-star ui-btn-icon-left">Marcar Pontos</button></p>
-            <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
-            <p><a href="#agendaPage" class="topcoat-button" id="agenda" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Agende uma visita</a></p>
-            <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Quiz</a></p>
-            <p><a href="#fulldataPage" class="topcoat-button" id="fulldata" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Cadastro Completo</a></p>
-            <p><a href="#lulurankPage" class="topcoat-button" id="ranklulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking dos Stands</a></p>
-        </div>-->
         <div>
-            <img class="navigation-icons" src="images/logo_rodape2.png" width="65%" height="65%">
+            <img class="navigation-icons" src="images/logo_rodape2.png">
             <p class="landing-copyright copyright">SOFTTEK COPYRIGHT 2014. </BR>ALL RIGHTS RESERVED</p>
         </div>
     </div>
