--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Olá <span id="ffname"></span>!</h1>
         </div>
         <div class="logo-splash">
-            <img class="logo-splash" src="images/logo-splash.png">
+            <img class="logo-splash" src="images/logo-splash.png" width="45%" height="45%">
         </div>
         <div data-role="content" class="navigation-icons">
             <a href="#fulldataPage" id="fulldata" data-transition="slide" class="nav-icon icon-red cadastro-nav"></a>
@@ -42,7 +42,7 @@
             <a href="#luluPage" id="lulu" data-transition="slide" class="nav-icon icon-yellow mail-nav"></a>
         </div>
         <div>
-            <img class="navigation-icons" src="images/logo_rodape2.png">
+            <img class="navigation-icons" src="images/logo_rodape2.png" width="45%" height="45%">
             <p class="landing-copyright copyright">SOFTTEK COPYRIGHT 2014. </BR>ALL RIGHTS RESERVED</p>
         </div>
     </div>
