--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#luluPage" id="lulu" data-transition="fade" class="nav-icon icon-yellow mail-nav"></a>
         </div>
         <div>
-            <p class="landing-copyright copyright">SOFTTEK COPYRIGHT 2014. </BR>ALL RIGHTS RESERVED</p>
+            <p class="landing-copyright copyright">SOFTTEK COPYRIGHT 2014. <br/>ALL RIGHTS RESERVED</p>
         </div>
     </div>
 
@@ -182,7 +182,7 @@
             <div class="header-text">
                 <img class="logo" alt="img" src="images/logo.png" width="240">
             </div>
-            <a class="logo-home" href="#home"><img src="images/logob.png" alt="img" width="40"></a>
+            <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
             <div class="heading">
@@ -249,7 +249,7 @@
             <div class="header-text">
                 <img class="logo" alt="img" src="images/logo.png" width="240">
             </div>
-            <a class="logo-home" href="#home"><img src="images/logob.png" alt="img" width="40"></a>
+            <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
             <div class="heading">
@@ -269,7 +269,7 @@
             <div class="header-text">
                 <img class="logo" alt="img" src="images/logo.png" width="240">
             </div>
-            <a class="logo-home" href="#home"><img src="images/logob.png" alt="img" width="40"></a>
+            <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
             <div class="heading">
@@ -298,7 +298,7 @@
             <div class="header-text">
                 <img class="logo" alt="img" src="images/logo.png" width="240">
             </div>
-            <a class="logo-home" href="#home"><img src="images/logob.png" alt="img" width="40"></a>
+            <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
             <div class="heading">
@@ -344,7 +344,7 @@
             <div class="header-text">
                 <img class="logo" alt="img" src="images/logo.png" width="240">
             </div>
-            <a class="logo-home" href="#home"><img src="images/logob.png" alt="img" width="40"></a>
+            <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
             <div class="heading">
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="decoration"></div>
-            <ul data-role="listview" id="myRankListView" data-theme="b" data-divider-theme="a" class="ui-listview ui-corner-all ui-shadow"></ul>
+            <ul data-role="listview" id="myRankListView" data-theme="d" data-divider-theme="a" class="ui-listview ui-corner-all ui-shadow"></ul>
         </div>
     </div>
 </body>
